--- a/6-Classification/q1.ipynb
+++ b/6-Classification/q1.ipynb
@@ -11,11 +11,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have to download all the nltk documents\n",
+      "Downloading to ../data this should only take a couple minutes\n",
+      "[nltk_data] Downloading collection 'all'\n",
+      "[nltk_data]    | \n",
+      "[nltk_data]    | Downloading package abc to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/abc.zip.\n",
+      "[nltk_data]    | Downloading package alpino to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/alpino.zip.\n",
+      "[nltk_data]    | Downloading package biocreative_ppi to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/biocreative_ppi.zip.\n",
+      "[nltk_data]    | Downloading package brown to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/brown.zip.\n",
+      "[nltk_data]    | Downloading package brown_tei to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/brown_tei.zip.\n",
+      "[nltk_data]    | Downloading package cess_cat to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/cess_cat.zip.\n",
+      "[nltk_data]    | Downloading package cess_esp to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/cess_esp.zip.\n",
+      "[nltk_data]    | Downloading package chat80 to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/chat80.zip.\n",
+      "[nltk_data]    | Downloading package city_database to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/city_database.zip.\n",
+      "[nltk_data]    | Downloading package cmudict to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/cmudict.zip.\n",
+      "[nltk_data]    | Downloading package comparative_sentences to\n",
+      "[nltk_data]    |     ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/comparative_sentences.zip.\n",
+      "[nltk_data]    | Downloading package comtrans to ../data...\n",
+      "[nltk_data]    | Downloading package conll2000 to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/conll2000.zip.\n",
+      "[nltk_data]    | Downloading package conll2002 to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/conll2002.zip.\n",
+      "[nltk_data]    | Downloading package conll2007 to ../data...\n",
+      "[nltk_data]    | Downloading package crubadan to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/crubadan.zip.\n",
+      "[nltk_data]    | Downloading package dependency_treebank to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/dependency_treebank.zip.\n",
+      "[nltk_data]    | Downloading package dolch to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/dolch.zip.\n",
+      "[nltk_data]    | Downloading package europarl_raw to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/europarl_raw.zip.\n",
+      "[nltk_data]    | Downloading package floresta to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/floresta.zip.\n",
+      "[nltk_data]    | Downloading package framenet_v15 to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/framenet_v15.zip.\n",
+      "[nltk_data]    | Downloading package framenet_v17 to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/framenet_v17.zip.\n",
+      "[nltk_data]    | Downloading package gazetteers to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/gazetteers.zip.\n",
+      "[nltk_data]    | Downloading package genesis to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/genesis.zip.\n",
+      "[nltk_data]    | Downloading package gutenberg to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/gutenberg.zip.\n",
+      "[nltk_data]    | Downloading package ieer to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/ieer.zip.\n",
+      "[nltk_data]    | Downloading package inaugural to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/inaugural.zip.\n",
+      "[nltk_data]    | Downloading package indian to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/indian.zip.\n",
+      "[nltk_data]    | Downloading package jeita to ../data...\n",
+      "[nltk_data]    | Downloading package kimmo to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/kimmo.zip.\n",
+      "[nltk_data]    | Downloading package knbc to ../data...\n",
+      "[nltk_data]    | Downloading package lin_thesaurus to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/lin_thesaurus.zip.\n",
+      "[nltk_data]    | Downloading package mac_morpho to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/mac_morpho.zip.\n",
+      "[nltk_data]    | Downloading package machado to ../data...\n",
+      "[nltk_data]    | Downloading package masc_tagged to ../data...\n",
+      "[nltk_data]    | Downloading package moses_sample to ../data...\n",
+      "[nltk_data]    |   Unzipping models/moses_sample.zip.\n",
+      "[nltk_data]    | Downloading package movie_reviews to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/movie_reviews.zip.\n",
+      "[nltk_data]    | Downloading package names to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/names.zip.\n",
+      "[nltk_data]    | Downloading package nombank.1.0 to ../data...\n",
+      "[nltk_data]    | Downloading package nps_chat to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/nps_chat.zip.\n",
+      "[nltk_data]    | Downloading package omw to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/omw.zip.\n",
+      "[nltk_data]    | Downloading package opinion_lexicon to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/opinion_lexicon.zip.\n",
+      "[nltk_data]    | Downloading package paradigms to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/paradigms.zip.\n",
+      "[nltk_data]    | Downloading package pil to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/pil.zip.\n",
+      "[nltk_data]    | Downloading package pl196x to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/pl196x.zip.\n",
+      "[nltk_data]    | Downloading package ppattach to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/ppattach.zip.\n",
+      "[nltk_data]    | Downloading package problem_reports to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/problem_reports.zip.\n",
+      "[nltk_data]    | Downloading package propbank to ../data...\n",
+      "[nltk_data]    | Downloading package ptb to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/ptb.zip.\n",
+      "[nltk_data]    | Downloading package product_reviews_1 to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/product_reviews_1.zip.\n",
+      "[nltk_data]    | Downloading package product_reviews_2 to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/product_reviews_2.zip.\n",
+      "[nltk_data]    | Downloading package pros_cons to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/pros_cons.zip.\n",
+      "[nltk_data]    | Downloading package qc to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/qc.zip.\n",
+      "[nltk_data]    | Downloading package reuters to ../data...\n",
+      "[nltk_data]    | Downloading package rte to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/rte.zip.\n",
+      "[nltk_data]    | Downloading package semcor to ../data...\n",
+      "[nltk_data]    | Downloading package senseval to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/senseval.zip.\n",
+      "[nltk_data]    | Downloading package sentiwordnet to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/sentiwordnet.zip.\n",
+      "[nltk_data]    | Downloading package sentence_polarity to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/sentence_polarity.zip.\n",
+      "[nltk_data]    | Downloading package shakespeare to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/shakespeare.zip.\n",
+      "[nltk_data]    | Downloading package sinica_treebank to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/sinica_treebank.zip.\n",
+      "[nltk_data]    | Downloading package smultron to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/smultron.zip.\n",
+      "[nltk_data]    | Downloading package state_union to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/state_union.zip.\n",
+      "[nltk_data]    | Downloading package stopwords to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/stopwords.zip.\n",
+      "[nltk_data]    | Downloading package subjectivity to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/subjectivity.zip.\n",
+      "[nltk_data]    | Downloading package swadesh to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/swadesh.zip.\n",
+      "[nltk_data]    | Downloading package switchboard to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/switchboard.zip.\n",
+      "[nltk_data]    | Downloading package timit to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/timit.zip.\n",
+      "[nltk_data]    | Downloading package toolbox to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/toolbox.zip.\n",
+      "[nltk_data]    | Downloading package treebank to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/treebank.zip.\n",
+      "[nltk_data]    | Downloading package twitter_samples to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/twitter_samples.zip.\n",
+      "[nltk_data]    | Downloading package udhr to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/udhr.zip.\n",
+      "[nltk_data]    | Downloading package udhr2 to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/udhr2.zip.\n",
+      "[nltk_data]    | Downloading package unicode_samples to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/unicode_samples.zip.\n",
+      "[nltk_data]    | Downloading package universal_treebanks_v20 to\n",
+      "[nltk_data]    |     ../data...\n",
+      "[nltk_data]    | Downloading package verbnet to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/verbnet.zip.\n",
+      "[nltk_data]    | Downloading package webtext to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/webtext.zip.\n",
+      "[nltk_data]    | Downloading package wordnet to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/wordnet.zip.\n",
+      "[nltk_data]    | Downloading package wordnet_ic to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/wordnet_ic.zip.\n",
+      "[nltk_data]    | Downloading package words to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/words.zip.\n",
+      "[nltk_data]    | Downloading package ycoe to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/ycoe.zip.\n",
+      "[nltk_data]    | Downloading package rslp to ../data...\n",
+      "[nltk_data]    |   Unzipping stemmers/rslp.zip.\n",
+      "[nltk_data]    | Downloading package maxent_treebank_pos_tagger to\n",
+      "[nltk_data]    |     ../data...\n",
+      "[nltk_data]    |   Unzipping taggers/maxent_treebank_pos_tagger.zip.\n",
+      "[nltk_data]    | Downloading package universal_tagset to ../data...\n",
+      "[nltk_data]    |   Unzipping taggers/universal_tagset.zip.\n",
+      "[nltk_data]    | Downloading package maxent_ne_chunker to ../data...\n",
+      "[nltk_data]    |   Unzipping chunkers/maxent_ne_chunker.zip.\n",
+      "[nltk_data]    | Downloading package punkt to ../data...\n",
+      "[nltk_data]    |   Unzipping tokenizers/punkt.zip.\n",
+      "[nltk_data]    | Downloading package book_grammars to ../data...\n",
+      "[nltk_data]    |   Unzipping grammars/book_grammars.zip.\n",
+      "[nltk_data]    | Downloading package sample_grammars to ../data...\n",
+      "[nltk_data]    |   Unzipping grammars/sample_grammars.zip.\n",
+      "[nltk_data]    | Downloading package spanish_grammars to ../data...\n",
+      "[nltk_data]    |   Unzipping grammars/spanish_grammars.zip.\n",
+      "[nltk_data]    | Downloading package basque_grammars to ../data...\n",
+      "[nltk_data]    |   Unzipping grammars/basque_grammars.zip.\n",
+      "[nltk_data]    | Downloading package large_grammars to ../data...\n",
+      "[nltk_data]    |   Unzipping grammars/large_grammars.zip.\n",
+      "[nltk_data]    | Downloading package tagsets to ../data...\n",
+      "[nltk_data]    |   Unzipping help/tagsets.zip.\n",
+      "[nltk_data]    | Downloading package snowball_data to ../data...\n",
+      "[nltk_data]    | Downloading package bllip_wsj_no_aux to ../data...\n",
+      "[nltk_data]    |   Unzipping models/bllip_wsj_no_aux.zip.\n",
+      "[nltk_data]    | Downloading package word2vec_sample to ../data...\n",
+      "[nltk_data]    |   Unzipping models/word2vec_sample.zip.\n",
+      "[nltk_data]    | Downloading package panlex_swadesh to ../data...\n",
+      "[nltk_data]    | Downloading package mte_teip5 to ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/mte_teip5.zip.\n",
+      "[nltk_data]    | Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]    |     ../data...\n",
+      "[nltk_data]    |   Unzipping taggers/averaged_perceptron_tagger.zip.\n",
+      "[nltk_data]    | Downloading package perluniprops to ../data...\n",
+      "[nltk_data]    |   Unzipping misc/perluniprops.zip.\n",
+      "[nltk_data]    | Downloading package nonbreaking_prefixes to\n",
+      "[nltk_data]    |     ../data...\n",
+      "[nltk_data]    |   Unzipping corpora/nonbreaking_prefixes.zip.\n",
+      "[nltk_data]    | Downloading package vader_lexicon to ../data...\n",
+      "[nltk_data]    | Downloading package porter_test to ../data...\n",
+      "[nltk_data]    |   Unzipping stemmers/porter_test.zip.\n",
+      "[nltk_data]    | Downloading package wmt15_eval to ../data...\n",
+      "[nltk_data]    |   Unzipping models/wmt15_eval.zip.\n",
+      "[nltk_data]    | Downloading package mwa_ppdb to ../data...\n",
+      "[nltk_data]    |   Unzipping misc/mwa_ppdb.zip.\n",
+      "[nltk_data]    | \n",
+      "[nltk_data]  Done downloading collection all\n"
+     ]
+    }
+   ],
    "source": [
     "#Special module written for this class\n",
     "#This provides access to data and to helper functions from previous weeks\n",
@@ -563,6 +775,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 'AND' Split"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {
@@ -684,6 +903,22 @@
    ],
    "source": [
     "and_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We see that in general, as one would expect, AUC reduces as noise increases, across all classifiers. The Gradient Boost classifier appears to do the best in low noise datasets, a Linear SVM in medium noise and Naive Bayes for high noise (this makes sense because NB doesn't impose distribution assumptions)."
    ]
   },
   {
@@ -811,6 +1046,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In the XOR datasets too, the high noise datasets have lower AUC. K-NN performs best across noise levels - this intuitively makes sense because of the structure of the underlying data.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
@@ -932,6 +1174,13 @@
    ],
    "source": [
     "target_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Here we notice similar patterns. K-NN, NB, GB all perform well."
    ]
   },
   {
@@ -1060,12 +1309,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "Go back through all of the cells above and generate 10 distinct artificial datasets and classify them with all of the available methods. Add a cell immediately below and describe which classifier(s) worked best with which artificially constructed data source and why. Then go through all of the empirical datasets (i.e., Newsgroups, Senate Small, Senate Large, Email Spam) and classify them with all available methods. Add a second cell immediately below and describe which classifier(s) worked best with which data set and why.\n",
-    "Stretch (but also required) Wander through the SKLearn documentation available here, particularly perusing the classifiers. In cells following, identify and implement a new classifier that we have not yet used (e.g., AdaBoost, CART) on one artificial dataset and one real dataset (used above). Then, in the next cell describe the classifier, detail how it compares with the approaches above, and why it performed better or worse than others."
+    "### Interestingly, all the classifiers achieve perfect prediction in the low noise category because the classes are so distinct. AUC in the medium and high-noise datasets is also very very high."
    ]
   },
   {
@@ -1084,6 +1330,19 @@
     "b = []\n",
     "for i in [1,2,6,10,3,7,11,4,8,12,5,9,13]:\n",
     "    b.append(adaboost[i-1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adaboost or adaptive boosting is a collection of weak learners that are combined into a weighted sum that give the final classifier.\n",
+    "\n",
+    "### Each subsequent weak learner is tuned to 'pay more attention' to those instances that are misclassified by previous classifiers.\n",
+    "\n",
+    "### It is sensitive  to noisy data and outliers. \n",
+    "\n",
+    "### Individual learners can be weak but so long as they are better than random guesses, they converge to a strong learner"
    ]
   },
   {
@@ -1324,6 +1583,13 @@
     "adaboost_df = pd.DataFrame({'0.Classifier':names, \n",
     "                       '1. AUC':random})\n",
     "adaboost_df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unsurprisingly, all the classifiers are relatively weak when it comes to classifying absolutely random data."
    ]
   },
   {
@@ -1680,6 +1946,17 @@
    ],
    "source": [
     "real_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Linear SVM and Logistic regression perform best for the Reddit and Newsgroups datasets.\n",
+    "### GB and Linear SVM are perfect for the two senator case.\n",
+    "### GB is best for the 5 senator case and MLPC for the Emails dataset"
    ]
   },
   {
